--- a/incremental-static-regeneration/app/globals.css
+++ b/incremental-static-regeneration/app/globals.css
@@ -1,11 +1,11 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #543e3e;
   --foreground: #171717;
 }
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -17,10 +17,22 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+.navbar{
+  display: flex;
+  justify-content: space-around;
+  background-color: #8f8686;
+  text-align: center;
+  color: #fff;
+  padding: 10px;
+}
+h1, h2{
+  font-size: 50px;
+  font-weight: 700;
 }
